[gd_scene load_steps=14 format=3 uid="uid://dvexns24mbh41"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_4cjhd"]
[ext_resource type="PackedScene" uid="uid://drwm0yb1mdeo8" path="res://scenes/bola.tscn" id="2_g7l3x"]
[ext_resource type="PackedScene" uid="uid://d0uweniqsslnk" path="res://scenes/mesa.tscn" id="3_45acg"]
[ext_resource type="PackedScene" uid="uid://clecbdn7movg2" path="res://scenes/taco.tscn" id="4_e4ecn"]
[ext_resource type="Script" path="res://scripts/PowerBar.gd" id="5_c7jvl"]
[ext_resource type="Texture2D" uid="uid://b3hkuh5gaoyqc" path="res://icon.svg" id="6_2lwaj"]
[ext_resource type="Script" path="res://scripts/screen.gd" id="7_kkqnw"]
[ext_resource type="PackedScene" uid="uid://d210d8k3gp6ak" path="res://scenes/roll_dice.tscn" id="8_ejpbm"]
[ext_resource type="Texture2D" uid="uid://d03mqfdew41rl" path="res://assets/ball_16.png" id="9_jieif"]
[ext_resource type="Texture2D" uid="uid://dqg6moc8b5dy5" path="res://assets/ball_8.png" id="10_uckew"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yysmw"]
bg_color = Color(1, 1, 1, 0.458824)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m1iqg"]
bg_color = Color(0.909804, 0, 0.254902, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_lmf8b"]
radius = 14.1

[node name="Sinuca" type="Node"]
script = ExtResource("1_4cjhd")
ball_scene = ExtResource("2_g7l3x")
current_enemy = 1
force_first_player = -1

[node name="Mesa" parent="." instance=ExtResource("3_45acg")]

[node name="Taco" parent="." instance=ExtResource("4_e4ecn")]
power_multiplier = 12

[node name="PowerBar" type="ProgressBar" parent="."]
z_index = 1
offset_left = 277.0
offset_top = 151.0
offset_right = 377.0
offset_bottom = 181.0
theme_override_styles/background = SubResource("StyleBoxFlat_yysmw")
theme_override_styles/fill = SubResource("StyleBoxFlat_m1iqg")
show_percentage = false
script = ExtResource("5_c7jvl")

[node name="Player" type="Label" parent="."]
offset_left = 24.0
offset_top = 525.0
offset_right = 132.0
offset_bottom = 548.0
text = "Jogador atual:"

[node name="jogador_atual" type="Label" parent="."]
offset_left = 137.0
offset_top = 525.0
offset_right = 245.0
offset_bottom = 548.0
text = "0"

[node name="Group" type="Label" parent="."]
offset_left = 24.0
offset_top = 550.0
offset_right = 132.0
offset_bottom = 573.0
text = "Grupo atual:"

[node name="grupo_atual" type="Label" parent="."]
offset_left = 137.0
offset_top = 550.0
offset_right = 245.0
offset_bottom = 573.0
text = "indefinido"

[node name="Fim de jogo" type="Label" parent="."]
offset_left = 24.0
offset_top = 573.0
offset_right = 132.0
offset_bottom = 596.0

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(891, 340)
exclude_parent = false
target_position = Vector2(-800, 0)
collision_mask = 2

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2(810, 259.5)
exclude_parent = false
target_position = Vector2(-800, 0)
collision_mask = 2

[node name="ShapeCast2D" type="ShapeCast2D" parent="."]
position = Vector2(321, 70)
enabled = false
shape = SubResource("CircleShape2D_lmf8b")
target_position = Vector2(151, 3)
collision_mask = 3
collide_with_areas = true

[node name="Line2D" type="Line2D" parent="."]
visible = false
z_index = 4096
width = 4.0

[node name="Line2D2" type="Line2D" parent="."]
visible = false
z_index = 4096
width = 4.0
default_color = Color(1, 0, 0, 1)

[node name="Line2D3" type="Line2D" parent="."]
visible = false
z_index = 4096
width = 4.0
default_color = Color(0.521291, 0.431825, 0.962876, 1)

[node name="Screen" type="Sprite2D" parent="."]
visible = false
position = Vector2(1021, 707)
texture = ExtResource("6_2lwaj")
script = ExtResource("7_kkqnw")

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2i(100, 100)

[node name="StaticBody3D" parent="SubViewport" instance=ExtResource("8_ejpbm")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(484, 276)

[node name="Projection0" type="Sprite2D" parent="."]
position = Vector2(-635, 260)
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_jieif")

[node name="Projection1" type="Sprite2D" parent="."]
position = Vector2(-635, 260)
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_jieif")

[node name="Projection2" type="Sprite2D" parent="."]
position = Vector2(-635, 260)
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_jieif")

[node name="Projection3" type="Sprite2D" parent="."]
position = Vector2(-635, 260)
scale = Vector2(0.2, 0.2)
texture = ExtResource("9_jieif")

[node name="WhiteBall" type="Sprite2D" parent="."]
z_index = 4096
position = Vector2(-623, 260)
scale = Vector2(0.2, 0.2)
texture = ExtResource("10_uckew")

[connection signal="shoot" from="Taco" to="." method="_on_taco_shoot"]
